[project]
name = "fastmcp-demo"
version = "0.1.0"
description = "Demo MCP server repository using FASTMCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "FASTMCP>=0.1.0",
    "uvicorn>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-dotenv>=1.0"
]
